--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_database: ^6.0.0
   flutter_signin_button: ^2.0.0
   splashscreen: ^1.3.5
+  cloud_firestore: ^0.16.0+1
 
 dev_dependencies:
   flutter_test:
