--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   splashscreen: ^1.3.5
   cloud_firestore: ^0.16.0+1
   table_calendar: ^2.3.3
+  dropdown_date_picker: ^0.1.1+2
 
 dev_dependencies:
   flutter_test:
