--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   table_calendar: ^2.3.3
   dropdown_date_picker: ^0.1.1+2
+  f_datetimerangepicker: ^0.1.4
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,7 @@ flutter:
   assets:
      - assets/image/KE7.jpg
      - assets/image/KE2.jpg
+     - assets/image/KEVIILogo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
