--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/image/KE7.jpg
-     - assets/image/KE2.jpg
-     - assets/image/KEVIILogo.png
+    - assets/image/KE7.jpg
+    - assets/image/KE2.jpg
+    - assets/image/KEVIILogo.png
+    - assets/image/KEView.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -73,17 +74,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-#  fonts:
-#     - family: Montserrat
-#       fonts:
-#         - asset: fonts/Montserrat-Regular.ttf
-#         - asset: fonts/Montserrat-Italic.ttf
-#           style: italic
-#     - family: Trajan Pro
-#       fonts:
-#         - asset: fonts/TrajanPro.ttf
-#         - asset: fonts/TrajanPro_Bold.ttf
-#           weight: 700
+  #  fonts:
+  #     - family: Montserrat
+  #       fonts:
+  #         - asset: fonts/Montserrat-Regular.ttf
+  #         - asset: fonts/Montserrat-Italic.ttf
+  #           style: italic
+  #     - family: Trajan Pro
+  #       fonts:
+  #         - asset: fonts/TrajanPro.ttf
+  #         - asset: fonts/TrajanPro_Bold.ttf
+  #           weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
