--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/image/KingEdwardFMS.jpg
     - assets/image/KingEdwardHolneChase.jpg
     - assets/image/KingEdwardOld.jpg
+    - assets/image/StudentInitiatives.png
 
       # An image asset can refer to one or more resolution-specific "variants", see
       # https://flutter.dev/assets-and-images/#resolution-aware.
