--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_auth: "^0.20.1"
   firebase_dynamic_links: ^0.5.1
   provider: ^4.3.2+1
+  sliding_up_panel: ^2.0.0+1
 
 
 
