--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   table_calendar: ^2.3.3
   dropdown_date_picker: ^0.1.1+2
   f_datetimerangepicker: ^0.1.4
+  flutter_form_builder: ^3.14.1
+
+dependency_overrides:
+  country_pickers: ^2.0.0
+  date_range_picker:
+    git:
+      url: https://github.com/LempereurBenjamin/date_range_picker
 
 dev_dependencies:
   flutter_test:
