--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "0.7.0"
-  firebase_auth: "^0.20.1"
-  firebase_dynamic_links: ^0.5.1
-  provider: ^4.3.2+1
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  firebase_dynamic_links: ^2.0.6
+  provider: ^5.0.0
   sliding_up_panel: ^2.0.0+1
 
 
@@ -34,19 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_database: ^6.0.0
+  firebase_database: ^7.1.1
   flutter_signin_button: ^2.0.0
   splashscreen: ^1.3.5
-  cloud_firestore: ^0.16.0+1
-  table_calendar: ^2.3.3
+  cloud_firestore: ^2.2.2
+  table_calendar: ^3.0.0
   dropdown_date_picker: ^0.1.1+2
   f_datetimerangepicker: ^0.1.4
-  flutter_form_builder: ^3.14.1
+  flutter_form_builder: ^6.0.1
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
-  mockito: ^4.1.1
+  test: any
+  mockito: ^5.0.10
   rxdart:
   flutter_automation: any
 
