--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.3.0
+  firebase_core:
   firebase_app_check:
   firebase_auth: ^1.4.1
   firebase_dynamic_links: ^2.0.6
